--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:l="clr-namespace:OpenOrder"
         xmlns:vml = "clr-namespace:OpenOrder.ViewModels"
         vml:ViewModelLocator.AutoHookedUpViewModel = "True" 
-        Title="Открыть" Width="513" Height="373" WindowStartupLocation="CenterScreen">
+        Title="Открыть" Width="513" Height="373" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -23,7 +23,7 @@
                     SelectedItem="{Binding SelectFolder}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}"  Width="230" Padding="5" Background="{Binding DefaultFolder}">
+                    <TextBlock Text="{Binding Name}"  Width="330" Padding="5" Background="{Binding DefaultFolder}">
                         <TextBlock.InputBindings>
                             <MouseBinding MouseAction="LeftDoubleClick"
                                           Command="{Binding DataContext.OpenSearchFolder, RelativeSource={RelativeSource AncestorType=ListBox}}" />
